@@ -13,7 +13,7 @@
         </rect>
     </property>
     <property name="caption">
-        <string>Form3</string>
+        <string>Error</string>
     </property>
     <property name="modal">
         <bool>true</bool>
@@ -25,6 +25,9 @@
         <widget class="QTextEdit" row="1" column="1" rowspan="1" colspan="3">
             <property name="name">
                 <cstring>textview_error</cstring>
+            </property>
+            <property name="readOnly">
+                <bool>true</bool>
             </property>
         </widget>
         <spacer row="1" column="0">
